# win-package-ui

./: .gitignore  PRD.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts  winget_search_output.txt
.agents/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
.github/workflows/: release.yml
src/: App.vue  background.ts  i18n.ts  main.ts  preload.ts  shims-vue.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/assets/css/: tailwind.css
src/components/common/: AppButton.vue  AppTab.vue  EmptyState.vue  LanguageToggle.vue  LoadingSpinner.vue  ProgressBar.vue  SettingsMenu.vue  ThemeToggle.vue  index.ts
src/components/modals/: ErrorModal.vue  InstallModal.vue  index.ts
src/components/package/: AppPagination.vue  BulkUpdateProgress.vue  PackageCard.vue  index.ts
src/layouts/: AppLayout.vue
src/lib/: theme.ts
src/locales/: en.json  tr.json
src/models/: category.ts  enums.ts  index.ts  notification.ts  package.ts
src/router/: index.ts
src/services/: cache.ts  command-builder.ts  ipc.ts
src/services/package-providers/: chocolatey.ts  index.ts  types.ts  winget.ts
src/stores/: app.ts  index.ts  memory.ts  notification.ts  packages.ts  ui.ts
src/types/: theme.ts
src/utils/: validator.ts
src/views/: DiscoverView.vue  DownloadsView.vue  MyPackagesView.vue  PackageDetailView.vue  SettingsView.vue
(+3 files in other folders)
